--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/react-dom": "^18.2.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
-    "@types/uuid": "^9.0.1",
     "aws-sdk": "^2.1399.0",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
@@ -24,7 +23,7 @@
     "history": "^5.3.0",
     "material-ui-popup-state": "^5.0.9",
     "myrecipes-httpclient": "^1.0.12",
-    "openai": "^3.3.0",
+    "openai": "^4.21.0",
     "react": "^18.2.0",
     "react-aws-s3": "^1.5.0",
     "react-aws-s3-typescript": "^1.1.5",
@@ -33,21 +32,21 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
-    "react-s3": "^1.3.1",
-    "react-scripts": "^2.1.3",
+    "react-s3": "^1.0.7",
+    "react-scripts": "^5.0.1",
     "react-toastify": "8.0.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "superagent": "^8.0.9",
-    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "--openssl-legacy-provider start",
+    "build": "--openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": [
