--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -1,5 +1,6 @@
 name: Deploy to Firebase Hosting on merge
-'on':
+
+on:
   push:
     branches:
       - main
@@ -10,17 +11,23 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 14
+      # Clear npm cache
+      - name: Clear npm cache
+        run: npm cache clean -f
 
+      # Install dependencies
       - name: Install Dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm install
 
+      # Install dependencies and force resolution
+      - name: Install Dependencies (force resolution)
+        run: npm ci --force
+
+      # Build the project
       - name: Build
         run: npm run build
 
+      # Deploy to Firebase Hosting
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
