--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      # Set CI=false for this job
+      - name: Set CI environment variable
+        run: echo "CI=false" >> $GITHUB_ENV
+
       # Clear npm cache
       - name: Clear npm cache
         run: npm cache clean -f
