--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
+REACT_APP_API_BASE_URL_LOCAL=http://localhost:4000
+REACT_APP_API_BASE_URL_PRODUCTION=https://my-recipes-serverstore.store
