--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start:local": "REACT_APP_NODE_ENV=local react-scripts start",
-    "build": "react-scripts build",
+    "build": "REACT_APP_NODE_ENV=production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
 
